# mauikit-documents

./: CMakeLists.txt  Mainpage.dox  MauiKitDocumentsConfig.cmake.in.5  MauiKitDocumentsConfig.cmake.in.6  Messages.sh  README.md  metainfo.yaml
po/ar/: mauikitdocuments.po
po/ca/: mauikitdocuments.po
po/ca@valencia/: mauikitdocuments.po
po/cs/: mauikitdocuments.po
po/de/: mauikitdocuments.po
po/en_GB/: mauikitdocuments.po
po/eo/: mauikitdocuments.po
po/es/: mauikitdocuments.po
po/eu/: mauikitdocuments.po
po/fi/: mauikitdocuments.po
po/fr/: mauikitdocuments.po
po/ga/: mauikitdocuments.po
po/gl/: mauikitdocuments.po
po/he/: mauikitdocuments.po
po/it/: mauikitdocuments.po
po/ja/: mauikitdocuments.po
po/ka/: mauikitdocuments.po
po/ko/: mauikitdocuments.po
po/lt/: mauikitdocuments.po
po/lv/: mauikitdocuments.po
po/nl/: mauikitdocuments.po
po/nn/: mauikitdocuments.po
po/pl/: mauikitdocuments.po
po/pt/: mauikitdocuments.po
po/pt_BR/: mauikitdocuments.po
po/sa/: mauikitdocuments.po
po/sk/: mauikitdocuments.po
po/sl/: mauikitdocuments.po
po/sv/: mauikitdocuments.po
po/tr/: mauikitdocuments.po
po/ug/: mauikitdocuments.po
po/uk/: mauikitdocuments.po
po/zh_CN/: mauikitdocuments.po
po/zh_TW/: mauikitdocuments.po
src/: CMakeLists.txt  resources.qrc
src/cbz/: ArchiveBookModel.cpp
src/code/: moduleinfo.cpp  moduleinfo.h  plugin.cpp  plugin.h
src/code/cbz/: CMakeLists.txt
src/code/cbz/code/: ArchiveBookModel.cpp  ArchiveImageProvider.cpp  ArchiveImageProvider.h  BookDatabase.cpp  BookListModel.cpp  BookModel.cpp  CategoryEntriesModel.cpp  ComicCoverImageProvider.cpp  ComicCoverImageProvider.h  FilterProxy.cpp  FolderBookModel.cpp  PDFCoverImageProvider.h  PeruseConfig.cpp  PeruseConfig.h  PreviewImageProvider.cpp  PreviewImageProvider.h  TextViewerItem.cpp  TextViewerItem.h
src/code/cbz/code/acbf/: AcbfAuthor.cpp  AcbfAuthor.h  AcbfBinary.h  AcbfBody.cpp  AcbfBody.h  AcbfBookinfo.cpp  AcbfBookinfo.h  AcbfContentrating.cpp  AcbfContentrating.h  AcbfData.h  AcbfDatabaseref.cpp  AcbfDatabaseref.h  AcbfDocument.cpp  AcbfDocument.h  AcbfDocumentinfo.cpp  AcbfDocumentinfo.h  AcbfFrame.cpp  AcbfFrame.h  AcbfIdentifiedObjectModel.h  AcbfInternalReference.h  AcbfInternalReferenceObject.h  AcbfJump.cpp  AcbfJump.h  AcbfLanguage.h  AcbfMetadata.cpp  AcbfMetadata.h  AcbfPage.cpp  AcbfPage.h  AcbfPublishinfo.cpp  AcbfPublishinfo.h  AcbfReference.h  AcbfReferences.cpp  AcbfReferences.h  AcbfSequence.cpp  AcbfSequence.h  AcbfStyle.cpp  AcbfStyle.h  AcbfStyleSheet.h  AcbfTextarea.cpp  AcbfTextarea.h  (+3 more)
src/code/cbz/code/karchive-rar/: CMakeLists.txt  KRar.h
src/code/epub/: cbzreader.cpp  cbzreader.h  epubreader.cpp  epubreader.h  pdfreader.cpp  pdfreader.h
src/code/epub/qhttpserver/: qhttpconnection.cpp  qhttpconnection.h  qhttprequest.h  qhttpresponse.cpp  qhttpresponse.h  qhttpserver.h
src/code/epub/quazip/: quazip.vcproj  quazip.vcxproj  quazip.vcxproj.filters
src/code/poppler/: CMakeLists.txt  img_assets.qrc
src/code/poppler/code/: pdfdocument.cpp  pdfdocument.h  pdfimageprovider.cpp  pdfimageprovider.h  pdfitem.cpp  pdfitem.h  pdftocmodel.cpp  pdftocmodel.h  thumbnailer.cpp  thumbnailer.h
src/code/poppler/data/fonts/: fonts.qrc
src/controls/: qmldir
src/controls.5/poppler/: PDFViewer.qml
src/controls.6/poppler/: PDFViewer.qml
src/controls/poppler/: PDFViewer.qml
